force-app/main/default/objects/Trail__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Very Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>