force-app/main/default/objects/Trail__c/fields/Distance_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_km__c</fullName>
    <label>Distance (km)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>