force-app/main/default/objects/Trail__c/fields/Elevation_m__c.field-meta.xml
<CustomField>
    <fullName>Elevation_m__c</fullName>
    <label>Elevation (m)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>