force-app/main/default/objects/Trail__c/fields/End_Latitude__c.field-meta.xml
<CustomField>
    <fullName>End_Latitude__c</fullName>
    <description>Latitude of the trail end location</description>
    <label>End Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>