force-app/main/default/objects/Trail__c/fields/End_Longitude__c.field-meta.xml
<CustomField>
    <fullName>End_Longitude__c</fullName>
    <description>Longitude of the trail end location</description>
    <label>End Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>