force-app/main/default/objects/Trail__c/fields/Route_Data__c.field-meta.xml
<CustomField>
    <fullName>Route_Data__c</fullName>
    <description>JSON data containing the trail route information</description>
    <label>Route Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>