force-app/main/default/objects/Trail__c/fields/Start_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Start_Latitude__c</fullName>
    <description>Latitude of the trail start location</description>
    <label>Start Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>