force-app/main/default/objects/Trail__c/fields/Start_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Start_Longitude__c</fullName>
    <description>Longitude of the trail start location</description>
    <label>Start Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>